--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -248,12 +248,18 @@
             
         </div>
 
-		{% unless section.settings.hide_shopping_links or page.template_suffix contains 'dalp' %}
+		    {% unless section.settings.hide_shopping_links or page.template_suffix contains 'dalp' %}
           <a href="{{ routes.cart_url }}" class="header-cart-btn ecom2-cart cart-toggle" id="ecom-header-cart" aria-label="shopping cart">
             <span class="icon icon-cart"></span>
     		<span class="cart-count cart-badge--desktop">{{ cart.item_count }}</span>
           </a>
         {% endunless %}
+
+        {%if settings.nmr_local %}
+          <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle;"></div>
+          <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+        {% endif %}
+        
       </div>
     </div>
 </header>
