--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -33,6 +33,7 @@
   {% if section.settings.show_contact_bar %}
       <div class="contact-bar medium-down--hide">
           <div class="contact_info">
+          {% unless settings.nmr_local %}
            {% if section.settings.multi_locations %}
             <ul>
               <li><a href="/a/pages/locations"  style="color:{{ section.settings.announcement_text_color }}"><i class="fa-solid fa-location-dot"></i>&nbsp;Contact Us</a></li>
@@ -52,6 +53,7 @@
 
             </ul>
             {% endif %}
+            {% endunless %}
             {% comment %}
             SOCIAL MEDIA ICONS
             {% endcomment %}
@@ -259,7 +261,7 @@
           <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle;"></div>
           <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
         {% endif %}
-        
+
       </div>
     </div>
 </header>
