--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -231,10 +231,28 @@
       </div>
       {% endunless %}
 
-      <div class="flex-item" style="display: flex; justify-content: space-between; align-items: center; margin-left: 30px; width: 100%; max-width: 400px;" id="ecom2-account-cart">      
+      {% if settings.nmr_local %}
+        <div class="flex-item" style="display: flex; justify-content: space-between; align-items: center; margin-left: 30px; width: 100%; max-width: 400px;" id="ecom2-account-cart">      
+      {% else %}
+        <div class="flex-item" style="display: flex; margin-left: 30px; vertical-align: middle;" id="ecom2-account-cart">      
+      {% endif %}
 		{% unless section.settings.hide_customer_login or page.template_suffix contains 'dalp' %}
-              <div style="display: flex; align-items: center;">
-                <i style="font-size: 24px; margin-right: 8px;" class="fa-solid fa-circle-user"></i>
+              {% if settings.nmr_local %}
+                <div style="display: flex; align-items: center;">
+                  <i style="font-size: 24px; margin-right: 8px;" class="fa-solid fa-circle-user"></i>
+                  {% if shop.customer_accounts_enabled %}
+                    <span class="ecom2-site-header--text-links medium-down--hide">
+                    {% if customer %}
+                      {% capture first_name %}{% endcapture %}
+                        <a style="display:block;" href="{{ routes.account_url }}">Hi, {{ customer.first_name }}</a> 
+                      {% else %}
+                        {{ 'layout.customer.sign_in' | t | customer_login_link }}
+                    {% endif %}    
+                    </span>
+                  {% endif %}
+                </div>
+              {% else %}
+                <i style="font-size: 24px;" class="fa-solid fa-circle-user"></i>
                 {% if shop.customer_accounts_enabled %}
                   <span class="ecom2-site-header--text-links medium-down--hide">
                   {% if customer %}
@@ -242,10 +260,12 @@
                       <a style="display:block;" href="{{ routes.account_url }}">Hi, {{ customer.first_name }}</a> 
                     {% else %}
                       {{ 'layout.customer.sign_in' | t | customer_login_link }}
+                      <span class="site-header--spacer">{{ 'layout.customer.or' | t }}</span>
+                      <span style="margin-right: 30px;">{{ 'layout.customer.create_account' | t | customer_register_link }}</span>
                   {% endif %}    
                   </span>
                 {% endif %}
-              </div>
+              {% endif %}
             {% endunless %}
             
 		    {% unless section.settings.hide_shopping_links or page.template_suffix contains 'dalp' %}
