--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -232,9 +232,9 @@
       {% endunless %}
 
       {% if settings.nmr_local %}
-        <div class="flex-item" style="display: flex; justify-content: space-between; align-items: center; margin-left: 30px; width: 100%; max-width: 400px;" id="ecom2-account-cart">      
+        <div class="flex-item" style="display: flex; justify-content: center; align-items: center; margin-left: 30px; width: 100%; max-width: 400px;" id="ecom2-account-cart">      
       {% else %}
-        <div class="flex-item" style="display: flex; margin-left: 30px; vertical-align: middle;" id="ecom2-account-cart">      
+        <div class="flex-item" style="display: flex; justify-content: center; align-items: center; margin-left: 30px;" id="ecom2-account-cart">      
       {% endif %}
 		{% unless section.settings.hide_customer_login or page.template_suffix contains 'dalp' %}
               {% if settings.nmr_local %}
@@ -269,14 +269,14 @@
             {% endunless %}
             
 		    {% unless section.settings.hide_shopping_links or page.template_suffix contains 'dalp' %}
-          <a href="{{ routes.cart_url }}" class="header-cart-btn ecom2-cart cart-toggle" id="ecom-header-cart" aria-label="shopping cart">
+          <a href="{{ routes.cart_url }}" class="header-cart-btn ecom2-cart cart-toggle" id="ecom-header-cart" aria-label="shopping cart" style="margin: 0 15px;">
             <span class="icon icon-cart"></span>
     		<span class="cart-count cart-badge--desktop">{{ cart.item_count }}</span>
           </a>
         {% endunless %}
 
         {%if settings.nmr_local %}
-          <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle;"></div>
+          <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle; margin-left: 15px;"></div>
           <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
         {% endif %}
 
