--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -238,13 +238,13 @@
       {% endif %}
 		{% unless section.settings.hide_customer_login or page.template_suffix contains 'dalp' %}
               {% if settings.nmr_local %}
-                <div style="display: flex; align-items: center;">
+                <div style="display: flex; align-items: center; white-space: nowrap;">
                   <i style="font-size: 24px; margin-right: 8px;" class="fa-solid fa-circle-user"></i>
                   {% if shop.customer_accounts_enabled %}
-                    <span class="ecom2-site-header--text-links medium-down--hide">
+                    <span class="ecom2-site-header--text-links medium-down--hide" style="white-space: nowrap;">
                     {% if customer %}
                       {% capture first_name %}{% endcapture %}
-                        <a style="display:block;" href="{{ routes.account_url }}">Hi, {{ customer.first_name }}</a> 
+                        <a style="display:inline-block; white-space: nowrap;" href="{{ routes.account_url }}">Hi, {{ customer.first_name }}</a> 
                       {% else %}
                         {{ 'layout.customer.sign_in' | t | customer_login_link }}
                     {% endif %}    
@@ -252,19 +252,21 @@
                   {% endif %}
                 </div>
               {% else %}
-                <i style="font-size: 24px;" class="fa-solid fa-circle-user"></i>
-                {% if shop.customer_accounts_enabled %}
-                  <span class="ecom2-site-header--text-links medium-down--hide">
-                  {% if customer %}
-                    {% capture first_name %}{% endcapture %}
-                      <a style="display:block;" href="{{ routes.account_url }}">Hi, {{ customer.first_name }}</a> 
-                    {% else %}
-                      {{ 'layout.customer.sign_in' | t | customer_login_link }}
-                      <span class="site-header--spacer">{{ 'layout.customer.or' | t }}</span>
-                      <span style="margin-right: 30px;">{{ 'layout.customer.create_account' | t | customer_register_link }}</span>
-                  {% endif %}    
-                  </span>
-                {% endif %}
+                <div style="display: flex; align-items: center; white-space: nowrap;">
+                  <i style="font-size: 24px; margin-right: 8px;" class="fa-solid fa-circle-user"></i>
+                  {% if shop.customer_accounts_enabled %}
+                    <span class="ecom2-site-header--text-links medium-down--hide" style="white-space: nowrap;">
+                    {% if customer %}
+                      {% capture first_name %}{% endcapture %}
+                        <a style="display:inline-block; white-space: nowrap;" href="{{ routes.account_url }}">Hi, {{ customer.first_name }}</a> 
+                      {% else %}
+                        {{ 'layout.customer.sign_in' | t | customer_login_link }}
+                        <span class="site-header--spacer">{{ 'layout.customer.or' | t }}</span>
+                        <span style="margin-right: 30px;">{{ 'layout.customer.create_account' | t | customer_register_link }}</span>
+                    {% endif %}    
+                    </span>
+                  {% endif %}
+                </div>
               {% endif %}
             {% endunless %}
             
