--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -232,16 +232,16 @@
       {% endunless %}
 
       {% if settings.nmr_local %}
-        <div class="flex-item" style="display: flex; justify-content: center; align-items: center; margin-left: 30px; width: 100%; max-width: 400px;" id="ecom2-account-cart">      
+        <div class="flex-item" style="display: flex; justify-content: center; align-items: center; width: 100%; max-width: 400px;" id="ecom2-account-cart">      
       {% else %}
-        <div class="flex-item" style="display: flex; justify-content: center; align-items: center; margin-left: 30px;" id="ecom2-account-cart">      
+        <div class="flex-item" style="display: flex; justify-content: center; align-items: center;" id="ecom2-account-cart">      
       {% endif %}
 		{% unless section.settings.hide_customer_login or page.template_suffix contains 'dalp' %}
               {% if settings.nmr_local %}
                 <div style="display: flex; align-items: center; white-space: nowrap;">
                   <i style="font-size: 24px; margin-right: 8px;" class="fa-solid fa-circle-user"></i>
                   {% if shop.customer_accounts_enabled %}
-                    <span class="ecom2-site-header--text-links medium-down--hide" style="white-space: nowrap;">
+                    <span class="ecom2-site-header--text-links medium-down--hide" style="white-space: nowrap; margin-left: 0px;">
                     {% if customer %}
                       {% capture first_name %}{% endcapture %}
                         <a style="display:inline-block; white-space: nowrap;" href="{{ routes.account_url }}">Hi, {{ customer.first_name }}</a> 
@@ -255,7 +255,7 @@
                 <div style="display: flex; align-items: center; white-space: nowrap;">
                   <i style="font-size: 24px; margin-right: 8px;" class="fa-solid fa-circle-user"></i>
                   {% if shop.customer_accounts_enabled %}
-                    <span class="ecom2-site-header--text-links medium-down--hide" style="white-space: nowrap;">
+                    <span class="ecom2-site-header--text-links medium-down--hide" style="white-space: nowrap; margin-left: 0px;">
                     {% if customer %}
                       {% capture first_name %}{% endcapture %}
                         <a style="display:inline-block; white-space: nowrap;" href="{{ routes.account_url }}">Hi, {{ customer.first_name }}</a> 
