--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -238,7 +238,7 @@
       {% endif %}
 		{% unless section.settings.hide_customer_login or page.template_suffix contains 'dalp' %}
               {% if settings.nmr_local %}
-                <div style="display: flex; align-items: center; white-space: nowrap;">
+                <div style="display: flex; align-items: center; white-space: nowrap; margin-left: 30px;">
                   <i style="font-size: 24px; margin-right: 8px;" class="fa-solid fa-circle-user"></i>
                   {% if shop.customer_accounts_enabled %}
                     <span class="ecom2-site-header--text-links medium-down--hide" style="white-space: nowrap; margin-left: 0px;">
