--- a/snippets/ecom-header-2.liquid
+++ b/snippets/ecom-header-2.liquid
@@ -232,7 +232,7 @@
       {% endunless %}
 
       {% if settings.nmr_local %}
-        <div class="flex-item" style="display: flex; justify-content: center; align-items: center; width: 100%; max-width: 400px;" id="ecom2-account-cart">      
+        <div class="flex-item" style="display: flex; justify-content: center; align-items: center; width: 100%; max-width: 400px; margin-left: 30px;" id="ecom2-account-cart">      
       {% else %}
         <div class="flex-item" style="display: flex; justify-content: center; align-items: center;" id="ecom2-account-cart">      
       {% endif %}
