--- a/snippets/ecom-header-3.liquid
+++ b/snippets/ecom-header-3.liquid
@@ -31,6 +31,7 @@
   {% if section.settings.show_contact_bar %}
       <div class="contact-bar medium-down--hide">
           <div class="contact_info">
+          {% unless settings.nmr_local %}
            {% if section.settings.multi_locations %}
             <ul>
               <li><a href="/a/pages/locations"  style="color:{{ section.settings.announcement_text_color }}"><i class="fa-solid fa-location-dot"></i>&nbsp;Contact Us</a></li>
@@ -50,6 +51,7 @@
 
             </ul>
             {% endif %}
+            {% endunless %}
     
             {% comment %}
             SOCIAL MEDIA ICONS
@@ -256,12 +258,17 @@
         {% endunless %}
       </div> 
 
-		{% unless section.settings.hide_shopping_links or page.template_suffix contains 'dalp' %}
+		    {% unless section.settings.hide_shopping_links or page.template_suffix contains 'dalp' %}
           <a href="{{ routes.cart_url }}" class="header-cart-btn ecom3-cart cart-toggle" id="ecom-header-cart" aria-label="shopping cart">
             <span class="icon icon-cart"></span>
     		<span class="cart-count cart-badge--desktop">{{ cart.item_count }}</span>
           </a>
         {% endunless %}
+
+        {%if settings.nmr_local %}
+          <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle; margin-left: 15px;"></div>
+          <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+        {% endif %}
      </div>
   </div>
 </header>
