--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -3232,6 +3232,16 @@ $shareBorderColor: #ececec;
   }
 }
 
+.ecom3-site-header--text-links {
+  display: inline-block;
+  font-size: 0.85em;
+  margin-left: 10px;
+
+   a {
+    font-weight: 700;
+  }
+}
+
 .site-header--text-links {
   display: inline-block;
   font-size: 0.85em;
