--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -3242,6 +3242,10 @@ $shareBorderColor: #ececec;
   }
 }
 
+#customer_login_link {
+  font-weight: 700;
+}
+
 .site-header--text-links {
   display: inline-block;
   font-size: 0.85em;
