Remove mobile header hover

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -7366,6 +7366,11 @@ form#ecom-round-search-bar input{
 
 .mobileNavBar-link {
 	color: $headerText;
+	
+	&:hover,
+	&:focus {
+		color: $headerText;
+	}
 }
 
 #ecom-mobile-search form {
