--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -497,6 +497,11 @@ Modify at your own peril, a broken website is the likely result.
   </div> 
 {% endunless %} 
 
+{%if settings.nmr_local %}
+  <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle;"></div>
+  <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+{% endif %}
+
 <nav class="nav-bar" id="navBar" role="navigation">
   
   <div class="wrapper">
