--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -498,8 +498,10 @@ Modify at your own peril, a broken website is the likely result.
 {% endunless %} 
 
 {%if settings.nmr_local %}
-  <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle;"></div>
-  <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+  <div id="mighty-location-selector-mobile" class="large--hide" style="display: block; text-align: center; padding: 10px; background-color: #f8f8f8; border-bottom: 1px solid #ddd;">
+    <div id="mighty-location-selector" style="display: inline-block; vertical-align: middle;"></div>
+    <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
+  </div>
 {% endif %}
 
 <nav class="nav-bar" id="navBar" role="navigation">
