--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -307,10 +307,17 @@ Modify at your own peril, a broken website is the likely result.
 		{% endunless %}
       </div>
       {%if settings.nmr_local %}
-        <div class="grid-item medium-down--hide large--one-quarter text-center large--text-right" style="padding-left: 10px;">
-            <div id="mighty-location-selector"></div>
-            <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js?v=3.2"></script>
-        </div>
+        <script>
+          window.MightyLocationSelectorConfig = {
+            theme: 'light',          // 'light' or 'dark' (default: 'light')
+            showHours: true,         // Show "open until" text (default: true)
+            showCityState: true,     // Show city/state below location name (default: true)
+            showPhone: true,         // Show clickable phone number (default: true)
+            defaultLocationId: null  // Default location ID to pre-select
+          };
+        </script>
+        <div id="mighty-location-selector"></div>
+        <script src="https://local.newmediaretailer.com/vendor/mighty/mighty-location-selector-widget.js"></script>
       {% endif %}
     </div>
     
