Re Order NMR Local in Header

--- a/snippets/ecom-header.liquid
+++ b/snippets/ecom-header.liquid
@@ -238,7 +238,7 @@
       </div>
 
       {% unless section.settings.hide_search_bar or page.template_suffix contains 'dalp' %}
-      <div class="grid-item text-center large--text-right" style="flex: 1 1 GNU auto; min-width: 250px; max-width: 40%; float: none;">
+      <div class="grid-item text-center large--text-right" style="flex: 1 1 auto; min-width: 250px; max-width: 40%; float: none;">
         {% include 'ecom-search-bar' %}
       </div>
       {% endunless %}
