Re Order NMR Local in Header

--- a/snippets/ecom-header.liquid
+++ b/snippets/ecom-header.liquid
@@ -219,7 +219,7 @@
                   theme: 'light',          // 'light' or 'dark' (default: 'light')
                   showHours: true,         // Show "open until" text (default: true)
                   showCityState: true,     // Show city/state below location name (default: true)
-                  showPhone: true,         // Show clickable phone number (default: true)
+                  showPhone: false,         // Show clickable phone number (default: true)
                   defaultLocationId: null  // Default location ID to pre-select
                 };
               </script>
